--- a/marmite.yaml
+++ b/marmite.yaml
@@ -1,6 +1,12 @@
 name: Diário de um Dev JR
 tagline: Publicações semanais sobre assuntos que estudo, curiosidades, dificuldades e dúvidas sobre diferentes stacks e sobre as minhas experiências pessoais que rodeiam um dev júnior
 url: https://lg8609a.github.io/lg8609
+
+remote_theme: rocha-bruno/marmite
+
+plugins:
+ - jekyll-remote-theme
+ 
 menu:
   - ["About", "about.html"]
   - ["Pages", "pages.html"]
