--- a/marmite.yaml
+++ b/marmite.yaml
@@ -9,9 +9,9 @@ plugins:
  - jekyll-remote-theme
  
 menu:
-  - ["About", "about.html"]
-  - ["Pages", "pages.html"]
-  - ["Tags", "tags.html"]
+  - ["About", "/content/about.html"]
+  - ["Pages", "/content/pages.html"]
+  - ["Tags", "/content/tags.html"]
   - ["Follow me", "https://www.linkedin.com/in/luizgns/"]
   - ["Github", "https://github.com/lg8609a"]
 
