--- a/marmite.yaml
+++ b/marmite.yaml
@@ -2,10 +2,7 @@
 
 # Site details
 title: Diário de um Dev JR
-description: O objetivo deste blog é simples: **compartilhar conhecimento**! 
-
-Quero documentar meus estudos, fixar conceitos importantes e ajudar quem também está nessa jornada de início na tecnologia. Além disso, busco criar novas conexões, conhecer outros profissionais e contar um pouco da minha história.
-url: https://lg8609a.github.io/lg8609/
+description: Publicações semanais sobre assuntos que estudo, curiosidades, dificuldades e dúvidas sobre diferentes stacks e sobre as minhas experiências pessoais que rodeiam um dev júnior
 author: Luiz Gustavo Saraiva
 
 # Theme configuration
