--- a/marmite.yaml
+++ b/marmite.yaml
@@ -2,9 +2,9 @@
 name: Diário de um Dev JR
 tagline: Publicações semanais sobre assuntos que estudo, curiosidades, dificuldades e dúvidas sobre diferentes stacks e sobre as minhas experiências pessoais que rodeiam um dev júnior
 
-# As linhas abaixo foram desativadas para deixar o GitHub Pages controlar os caminhos
-# url: "https://lg8609a.github.io"
-# baseurl: "/lg8609"
+# As linhas abaixo SÃO NECESSÁRIAS para este tema funcionar
+url: "https://lg8609a.github.io"
+baseurl: "/lg8609"
 
 # Configuração do tema remoto
 remote_theme: rocha-bruno/marmite
